# FaceDetection

./: CMakeLists.txt  Jenkinsfile  README.md
src/: main.cpp
